# tuicr

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: copilot-instructions.md
docs/: CONFIG.md  GITLAB.md  KEYBINDINGS.md  REVIEW_CLI.md
public/: tuicr-demo.cast
scripts/demo/: drive_demo.py  record-demo.sh  setup-fixture.sh
skills/tuicr/: SKILL.md
src/: app.rs  cli.rs  handler.rs  main.rs  review_cli.rs  review_store.rs  slug.rs
src/app/: annotations.rs  comment_vim.rs  comments.rs  commits.rs  diff_load.rs  gaps.rs  init.rs  mod.rs  modes.rs  navigation.rs  pr.rs  reviewed.rs  search.rs  session.rs  submit.rs  tree.rs  visual.rs
src/app/tests/: change_status_tests.rs  commit_scoped_comment_tests.rs  commit_selection_tests.rs  decoration_skip_tests.rs  diff_source_tests.rs  expand_gap_tests.rs  find_source_line_tests.rs  mod.rs  persistence_merge_tests.rs  scroll_behavior_tests.rs  scroll_tests.rs  single_file_view_tests.rs  submit_flow_tests.rs  target_selector_tests.rs  tree_tests.rs  visual_selection_tests.rs
src/config/: mod.rs
src/forge/: context.rs  mod.rs  pr_open.rs  remote_comments.rs  submit.rs  traits.rs
src/forge/github/: gh.rs  mod.rs  models.rs  review_summaries.rs  submit.rs
src/forge/gitlab/: glab.rs  (+2 more)
src/input/: keybindings.rs
src/model/: comment.rs  diff_types.rs  review.rs
src/output/: markdown.rs
src/persistence/: manifest.rs  mod.rs  storage.rs
src/theme/: mod.rs
src/ui/: app_layout.rs  comment_navigator.rs  comment_panel.rs  commit_row.rs  diff_side_by_side.rs  diff_unified.rs  diff_view.rs  file_list.rs  help_popup.rs  inline_commit_selector.rs  mod.rs  row_height.rs  selector.rs  status_bar.rs  styles.rs  submit_modals.rs  text_utils.rs
src/vcs/: file.rs  mod.rs  pr_noop.rs  traits.rs
(+8 files in other folders)
