[package]
name = "tuicr"
version = "0.18.0"
edition = "2024"
description = "Review AI-generated diffs like a GitHub pull request, right from your terminal."
license = "MIT"
repository = "https://github.com/agavra/tuicr"
homepage = "https://github.com/agavra/tuicr"
readme = "README.md"
keywords = ["tui", "git", "code-review", "diff", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI framework
# `unstable-rendered-line-info` exposes `Paragraph::line_count`, which we use to
# measure each line's word-wrapped height with ratatui's own wrapping engine so
# per-row diff backgrounds/overlays align exactly with the rendered text.
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"

# Git operations
git2 = { version = "0.20", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Utilities
directories = "6.0"
ureq = { version = "3", features = ["json"] }
unicode-width = "0.2"
uuid = { version = "1.0", features = ["v4"] }
arboard = { version = "3.4", features = ["wayland-data-control"] }
base64 = "0.22"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
shlex = "1.3"
sha1 = "0.10"

# Syntax highlighting
syntect = "5.2"
two-face = { version = "0.5", default-features = false, features = ["syntect-default-fancy"] }

[dev-dependencies]
tempfile = "3.24.0"
